[package]
name = "RustyBear-Engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = { version = "0.6.3", features = ["serde"] }
env_logger = "0.10.0"
gilrs = "0.10.2"
log = "0.4.18"
pollster = "0.3.0"
rccell = "0.1.3"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
simplelog = "0.12.1"
wgpu = "0.17.0"
winit = "0.28.6"
winit-fullscreen = "1.0.1"
