[package]
name = "RustyBear-Engine"
version = "0.1.0"
edition = "2021"
author = "Thomas Wachter"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
bimap = { version = "0.6.3", features = ["serde"] }
env_logger = "0.10.0"
gilrs = "0.10.2"
log = "0.4.18"
pollster = "0.3.0"
rccell = "0.1.3"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
simplelog = "0.12.1"
wgpu = "0.17.0"
winit = "0.28.6"
winit-fullscreen = "1.0.1"
instant = "0.1"
kira = "0.8.4"
bytemuck = { version = "1.13.1", features = ["derive"] }
wgpu_macros = "0.1.0"
image = "0.24.6"
rayon = "1.7.0"
clap = { version = "4.3.10", features = ["derive"] }
gltf = "1.2.0"
glam = "0.24.1"
egui_wgpu_backend = { version = "0.25.0", features = ["web"] }
egui_winit_platform = "0.20.0"
egui = "0.22.0"
egui_demo_lib = "0.22.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.17.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
